Rename data entity fields according to ODD specification (#544)